# whatsapp-mcp

./: .gitignore  README.md  fix-vm-networking.ps1  setup.ps1
.omo/run-continuation/: ses_0b5ff9e0effeZG1ADDc1EAc6LH.json  ses_0b60b2c4ffferm5PAtZI5SCnUx.json  ses_0b62c6181ffeZuGDWOYWkJbQXv.json  ses_0b8350577ffev3QR675315vs8m.json  ses_0b842e4a4ffeyDQspDOENbFnvm.json  ses_0b843131bffeKygKj4ppJCZQcD.json  ses_0b8442639ffeyC8e2q4MrEg6DE.json
tests/: test-windows-startup.ps1
whatsapp-bridge/: main.go  main_test.go  run-bridge-hidden.vbs  run-bridge-supervisor.ps1  run-bridge.ps1  uninstall.ps1
whatsapp-mcp-server/: main.py  message_transcripts.py  pyproject.toml  transcribe.py  transcript_cache.py  whatsapp.py
whatsapp-mcp-server/tests/: test_bridge_port.py  test_list_messages.py  test_transcribe.py  test_transcript_cache.py
